samples/_failures_safe/1761444199_e422ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_279f2aa5.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_279f2aa5.c:167:37: error: missing terminating " character
  167 |         case TOKEN_OPERATOR: return "OPER
      |                                     ^~~~~
./samples/SAFE/__tmp_279f2aa5.c:167:9: error: expected expression at end of input
  167 |         case TOKEN_OPERATOR: return "OPER
      |         ^~~~
./samples/SAFE/__tmp_279f2aa5.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_279f2aa5.c:167:9: error: expected declaration or statement at end of input
